--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": "18.12.1"
   },
   "scripts": {
-    "clean": "rmdir /s /q public",
+    "clean": "rm -rf public",
     "build": "npm install --prefix client && npm run build --prefix client",
     "deploy": "cp -a client/build/. public/",
     "heroku-postbuild": "npm run clean && npm run build && npm run deploy"
