--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,10 @@
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.1",
         "source-map-explorer": "^2.5.3",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "react-bootstrap": "^2.7.4",
+        "react-final-form": "^6.5.9",
+        "react-dropdown": "^1.11.0"
     },
     "engines": {
         "node": "18.12.1"
