--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,15 @@
         "eslint-config-react-app": "^7.0.1",
         "google-map-react": "^2.2.1",
         "react": "^18.2.0",
+        "react-bootstrap": "^2.7.4",
         "react-dom": "^18.2.0",
+        "react-dropdown": "^1.11.0",
+        "react-final-form": "^6.5.9",
+        "react-google-recaptcha": "^3.1.0",
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.1",
         "source-map-explorer": "^2.5.3",
-        "web-vitals": "^2.1.4",
-        "react-bootstrap": "^2.7.4",
-        "react-final-form": "^6.5.9",
-        "react-dropdown": "^1.11.0"
+        "web-vitals": "^2.1.4"
     },
     "engines": {
         "node": "18.12.1"
