--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
         "web-vitals": "^2.1.4"
     },
     "engines": {
-        "node": "18.x"
+        "node": "18.12.1"
     },
     "scripts": {
         "analyze": "source-map-explorer 'build/static/js/*.js'",
