--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "heroku-deploy",
   "description": "Build scripts for Heroku",
   "engines": {
-    "node": "18.x"
+    "node": "18.12.1"
   },
   "scripts": {
     "clean": "rm -rf public",
