--- a/config/database.yml
+++ b/config/database.yml
@@ -1,16 +1,3 @@
-# PostgreSQL. Versions 9.3 and up are supported.
-#
-# Install the pg driver:
-#   gem install pg
-# On macOS with Homebrew:
-#   gem install pg -- --with-pg-config=/usr/local/bin/pg_config
-# On macOS with MacPorts:
-#   gem install pg -- --with-pg-config=/opt/local/lib/postgresql84/bin/pg_config
-# On Windows:
-#   gem install pg
-#       Choose the win32 build.
-#       Install PostgreSQL and put its /bin directory on your path.
-# Configure Using Gemfile
 default: &default
   adapter: postgresql
   encoding: unicode
@@ -18,22 +5,27 @@ default: &default
 
 development:
   <<: *default
-  database: la_orthos
-  username: postgres
-  password: <%= ENV["LA_ORTHOS_DATABASE_PASSWORD"] %>
-  host: localhost
+  database: postgres
+  username: postgres@riverside-postgres-server
+  password: <%= ENV["REACT_APP_DATABASE_PASSWORD"] %>
+  host: riverside-postgres-server.postgres.database.azure.com
   port: 5432
+  sslmode: require
 
 test:
   <<: *default
-  database: la_orthos_test
-  username: postgres
-  password: <%= ENV["LA_ORTHOS_DATABASE_PASSWORD"] %>
+  database: postgres
+  username: postgres@riverside-postgres-server
+  password: <%= ENV["REACT_APP_DATABASE_PASSWORD"] %>
+  host: riverside-postgres-server.postgres.database.azure.com
+  port: 5432
+  sslmode: require
 
 production:
   <<: *default
-  database: laoss-webapp
-  username: postgresloass
-  password: <%= ENV["LA_ORTHOS_DATABASE_PASSWORD"] %>
-  host: loass-webapp.postgres.database.azure.com
+  database: postgres
+  username: postgres@riverside-postgres-server
+  password: <%= ENV["REACT_APP_DATABASE_PASSWORD"] %>
+  host: riverside-postgres-server.postgres.database.azure.com
   port: 5432
+  sslmode: require
