--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
     "name": "client",
     "version": "0.1.0",
     "private": true,
-    "proxy": "https://riversideorthos.azurewebsites.net/",
+    "proxy": "https://ortho-associates-of-riverside-12d6d06d6fbb.herokuapp.com/",
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
