--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -4,7 +4,7 @@ development:
 
 production:
   :concurrency: 1
-  :url: <%= ENV['REDIS_TLS_URL'] %>
+  :url: <%= ENV['REDIS_URL'] %>
 
 
 # stopeed at 4:00 and changed to just sidekiq
